# rust_web_framework

./: Cargo.toml  LICENSE  README.md
docs/: _config.yml  documentation.md  index.md  page1.md
docs/getting_started/: configuration.md  installation.md
docs/m1/: page2.md
src/: aws_lambda.rs  commander.rs  lib.rs  main.rs  my_module.rs
src/app/controllers/: foo_controller.rs  mod.rs
src/routes/: api.rs  mod.rs  r1.rs
tests/: test1.rs  test2.rs
