[package]
name = "web_framework"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
lambda_http = "0.8.3"
tokio = { version = "1.35.0", features = ["full"] }

[[bin]]
name = "commander"
path = "src/commander.rs"

[[bin]]
name = "main"
path = "src/main.rs"