[package]
name = "web_framework"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.2"
lambda_http = "0.8.3"
serde_json = "1.0.108"
pretty_assertions = "1.4.0"
tokio = { version = "1.35.0", features = ["full"] }
tokio-test = "0.4.3"

[[bin]]
name = "commander"
path = "src/commander.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "aws_lambda"
path = "src/aws_lambda.rs"
